library/pod-security-policy/host-namespaces/samples/psp-host-namespace/example-exeption-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-namespace-imageexemption
  labels:
    app: nginx-host-namespace
spec:
  hostPID: true
  hostIPC: true
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: nginx
    image: exception.azurecr.io/exception:1.0.0
    resources:
      limits:
        cpu: "100m"
        memory: "30Mi"
